--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,96 +21,13 @@
       .Neue_Machina_normal{
         font-family: Neue Machina;
       }
-
 *{
     font-family: "Raleway", sans-serif;
+}
+::marker{
+  font-size: 12px;
 }
 
 .Plus_jakarta_font{
     font-family: "Plus Jakarta Sans", sans-serif;
-}
-.first_box{
-  animation: topLeft 2s  ;
-}
-.sec_box{
-  animation: topRight 2s  ;
-}
-.third_box{
-  animation: bottomRight 2s  ;
-}
-.forth_box{
-  animation: bottomLeft 2s  ;
-}
-.loder{
-  animation: loader 2s;
-}
-@keyframes topLeft {
-  0%{
-    top: 0;
-    left: 0;
-  }
-  50%{
-    top: 0;
-    left: 0;
-  }
- 100% {
-  top: -100%;
-  left: -100%;
- }
-}
-@keyframes topRight {
-  0%{
-    top: 0;
-    right: 0;
-  }
-  50%{
-    top: 0;
-    right: 0;
-  }
- 100% {
-  top: -100%;
-  righ3: -100%;
- }
-}
-@keyframes bottomRight {
-  0%{
-    bottom: 0;
-    right: 0;
-  }
-  50%{
-   bottom: 0;
-   right: 0;
-  }
- 100% {
-  bottom: -100%;
-  right: -100%;
- }
-}
-@keyframes bottomLeft {
-  0%{
-    bottom: 0;
-    left: 0;
-  }
-  50%{
-  bottom: 0;
-  left: 0;
-  }
- 100% {
-  bottom: -100%;
-    left: -100%;
- }
-}
-@keyframes loader {
-  0%{
-    top: 50%;
-    left: 50%;
-  }
-  50%{
-    top: 50%;
-    left: 50%;
-  }
-  100%{
-top: -100%;
-left: -100%;
-  }
 }
