--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 *{
-  scroll-behavior: smooth;
+  scroll-behavior: smooth; 
+
 }
   @font-face {
       font-family: Neue Machina Ultrabold;
@@ -26,6 +27,9 @@
 }
 ::marker{
   font-size: 12px;
+}
+img{
+  pointer-events: none;
 }
 
 .Plus_jakarta_font{
